# rust_os

./: .gitignore  Cargo.toml  OVMF_VARS.backup  OVMF_VARS.fd  build.py  makefile
bootloader/: Cargo.toml
bootloader/src/: console.rs  file.rs  macros.rs  main.rs  memory.rs  s16.rs  std.rs  video.rs
elf/: Cargo.toml
elf/src/: lib.rs
kernel/: Cargo.toml
src/: main.rs
tests/: Cargo.toml  elf.rs
tests/src/: lib.rs  test_elf.rs  test_uefi.rs
uefi/: Cargo.toml
uefi/src/: efi_system_table.rs  guid.rs  lib.rs  status.rs
uefi/src/network/: mod.rs
uefi/src/protocols/: console_support.rs  device_path_protocols.rs  efi_loaded_image.rs  media_access.rs  mod.rs  uefi_driver_model.rs
uefi/src/services/: boot.rs  runtime.rs
